--- a/style.css
+++ b/style.css
@@ -4,25 +4,25 @@ body {
   color: #333;
   font-family: Lato, sans-serif;
 }
-.aaa {
+.matrix {
   width: 500px;
   margin: 0 auto;
   display: block;
   text-align: right;
 }
-.aaa img {
+.matrix img {
   width: 100%;
 }
-.aaa .more_inf {
+.matrix .matrix-inf {
   font-family: fantasy, cursive;
 }
 
 @media (max-width:768px) {
-  .aaa {
+  .matrix {
     text-align: center;
   }
 }
-.centered-main-page-element {
+.list-zone {
   display: block;
   width: 500px;
   margin: 0 auto 0;
@@ -133,10 +133,10 @@ ul#completed-tasks label {
 ul li input[type=text] {
   display:none
 }
-ul li.editMode input[type=text] {
+ul li.edit-mode input[type=text] {
   display:inline-block;
   width:224px
 }
-ul li.editMode label {
+ul li.edit-mode label {
   display:none;
 }
