--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /* Basic Style */
-body {
+.page {
   background-color: #f8f8f8;
   color: #333;
   font-family: Lato, sans-serif;
@@ -10,7 +10,7 @@ body {
   display: block;
   text-align: right;
 }
-.matrix img {
+.matrix-img {
   width: 100%;
 }
 .matrix .matrix-inf {
@@ -39,10 +39,12 @@ ul {
   margin:0;
   padding: 0px;
 }
-li, h3 {
+li,
+h3 {
   list-style:none;
 }
-input,button{
+input,
+button{
   outline:none;
 }
 button {
